--- a/index.html
+++ b/index.html
@@ -433,9 +433,9 @@
 					{
 						// 0x6aebf9
 						// #908E91
-						createCubeWall(99,78,78,0,new THREE.MeshPhongMaterial({ color: 0x908e91 }),-440,39,-130);
-						createCubeWall(99,78,78,0.5,new THREE.MeshPhongMaterial({ color: 0x908e91 }),-445,39,0);
-						createCubeWall(99,78,78,0,new THREE.MeshPhongMaterial({ color: 0x908e91 }),-440,39,130);
+						// createCubeWall(99,78,78,0,new THREE.MeshPhongMaterial({ color: 0x908e91 }),-440,39,-130);
+						// createCubeWall(99,78,78,0.5,new THREE.MeshPhongMaterial({ color: 0x908e91 }),-445,39,0);
+						// createCubeWall(99,78,78,0,new THREE.MeshPhongMaterial({ color: 0x908e91 }),-440,39,130);
 					}
 
 					function createFans(x1, y1, z1, x2, y2, z2) {
