--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			<div id="div_top">
 				<div id="title">
 					<p id="ptitle">
-						<img src="https://i.328888.xyz/2023/04/02/iHRz78.png" alt="小鹿糕" width="50px" height="50px">
+						<img src="https://s1.ax1x.com/2023/06/11/pCZnR78.png" alt="小鹿糕" width="50px" height="50px">
 						城乡动脉——基于时间序列控制的IOT污水处理系统
 					</p>
 				</div>
@@ -599,8 +599,8 @@
 			</div>
 			<div id="div_bottom">
 				<button class="buttons" id="曝气控制" onclick="boilControl()">曝气控制</button>
-				<button class="buttons" id="在线监测" onclick="onlineDetection()">开始监测</button>
-				<button class="buttons" id="历史数据">历史数据</button>
+				<button class="buttons" id="在线曝气" onclick="onlineDetection()">开始曝气</button>
+				<button class="buttons" id="获取数据" onclick="acquireData()">获取数据</button>
 				<button class="buttons" id="退出">退出</button>
 				<table id="myTable" bgcolor="#AAFF00">
 					<tbody>
