--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 	<script type="module" src="./ThreeJs/js/three.min.js"></script>
 	<script type="module" src="./js/model.js"></script>  <!-- module的加载使用es6语法，需要添加type  -->
 	<script type="text/javascript" src="./js/button.js"></script>
+	<script src="./js/prepare.js"></script>
+	<script src="https://unpkg.com/gsap@3.11.1/dist/gsap.min.js"></script>
+	<script src="https://unpkg.com/lil-gui@0.17.0/dist/lil-gui.umd.min.js"></script>
+	<script src="https://unpkg.com/ccapture.js@1.1.0/build/CCapture.all.min.js"></script>
+	<script src="https://unpkg.com/kokomi.js/build/kokomi.umd.js"></script>
+	<script src="https://unpkg.com/three@0.144.0/build/three.min.js"></script>
 	<!-- css 部分 -->
 	<link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
